crates/analyzer/tests/snapshots/errors__unary_always_mismatch_type_case_1.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: Can not apply unary operator
  ┌─ [snippet]:4:16
  │
4 │   let y:u256 = -x
  │                ^^ Expected unsigned type `u256`. Unary operator `-` can not be used here.


